--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Segoe UI", sans-serif;
-  height: 90vh;
+  min-height: 100vh;
   width: 80%;
   display: flex;
   justify-content: center;
@@ -20,6 +20,7 @@ body {
     width: 90%;
     box-shadow: 0.5px 1px 3px rgb(127, 127, 127);
     border-radius: 15px;
+
     overflow: hidden;
     margin-top: 100px;
 
